--- a/CASA_data_extraction.ipynb
+++ b/CASA_data_extraction.ipynb
@@ -77,9 +77,9 @@
     "        totaldf = pd.read_csv(file, sep='\\t', encoding = 'ascii')\n",
     "        totaldf = totaldf.dropna(axis = 1, how = 'all')\n",
     "        totalclean = totaldf[keep].copy()\n",
-    "        if not totalclean.empty:"
-    "          totalclean.loc[:,'SAMPLE'] = condition\n",
-    "          compiledf = pd.concat([totalclean, compiledf], ignore_index = True)\n",
+"        if not totalclean.empty:\n",
+"            totalclean.loc[:, 'SAMPLE'] = condition\n",
+"            compiledf = pd.concat([totalclean, compiledf], ignore_index=True)\n",
     "compiledf = compiledf.rename(columns = {'SORT1_COUNT':'HYP1_COUNT','SORT2_COUNT':'HYP2_COUNT'})\n",
     "compiledf = compiledf[sort]\n",
     "compiledf = compiledf.sort_values(by='SAMPLE').reset_index(drop=True)\n",
@@ -99,7 +99,7 @@
     "            print(f'Skipping {filename}: no relevant columns found')\n",
     "            continue\n",
     "        spermclean = spermdf[available_cols].copy()\n",
-    "        if not spermclean.empty:"
+    "        if not spermclean.empty:",
     "           spermclean.loc[:,'SAMPLE'] = conditionsperm\n",
     "           compilesperm = pd.concat([compilesperm, spermclean], ignore_index=True)\n",
     "\n",
